fix image scaling on mobile (contact section)

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -66,7 +66,7 @@ img {
 }
 
 /* Responsive columns */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .article-container {
     width: 100%;
   }
@@ -74,6 +74,9 @@ img {
     width: 50%;
     display: block;
     margin-bottom: 20px;
+  }
+  .cols {
+    width: 50%;
   }
 }
 
